--- a/Assignment4/Q1.html
+++ b/Assignment4/Q1.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>User login</h1>
+    <Form action="login" method="post">
+        <label>username</label><br>
+        <input type="text" name="username" id="username" required><br><br>
+        <label>password</label><br>
+        <input type="password" id="password" name="password" required><br>
+        <br>
+        <button type="submit">Submit</button>
+        <br><br>
+        <a href="">Forget password??</a>
+    </Form>
+    <br>
+    <hr>
+    <br>
+    <h1>Forget Password</h1>
+    <form>
+        <label>Email :</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+        <label>New Password:</label><br>
+        <input type="password" id="npass" name="npass" required><br><br>
+        <label>Confirm Password</label><br>
+        <input type="password" id="npass" name="npass" required><br>
+        <button type="submit">Reset Password</button>
+    </form>
+</body>
+</html>
