--- a/Assignment4/Q5.html
+++ b/Assignment4/Q5.html
@@ -6,6 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Dynamic product order form</h1>
+    <form>
+        <label>Customer Name :</label><br>
+        <input type="text" name="name" required><br><br>
+
+        <label>Email :</label><br>
+        <input type="email" name="email" required><br><br>
+
+        <label>Address :</label><br>
+        <input type="text" name="Address" required><br><br>
+
+        <label>Product :</label><br>
+        <select name="product" id="product" required>
+            <option value="fashion">Fashion</option>
+            <option value="techenology">Techenology</option>
+            <option value="Garments">Garments</option>
+            <option value="Groceries">Groceries</option>
+        </select>
+    </form>
 </body>
 </html>
