--- a/Assignment4/Q5.html
+++ b/Assignment4/Q5.html
@@ -24,6 +24,18 @@
             <option value="Garments">Garments</option>
             <option value="Groceries">Groceries</option>
         </select>
+        <br><br>
+        <label>Quantity:</label><br>
+        <input type="number" name="Quantity" required><br><br>
+        <label>Delivery preference</label><br>
+        <input type="radio" name="Standard"><label>Standard</label><br>
+        <input type="radio" name="express"><label>Express</label>
+        <br><Br>
+        <label><b>Apply coupon</b></label><br>
+        <input type="text" name="coupon"><br>
+        <button>Calculate discount</button>
+        <br><br>
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
